--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">Devops Essentials - 4Linux</div>
+	<div class="alert">Devops Essentials - 4Linux - 01</div>
 	
 	<div class="container">
 		<div class="logo">
